--- a/HostAPI/CMakeLists.txt
+++ b/HostAPI/CMakeLists.txt
@@ -5,7 +5,17 @@ set(CMAKE_CXX_STANDARD 17)
 
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(LIBUSB REQUIRED libusb-1.0)
-pkg_check_modules(HIDAPI REQUIRED hidapi-hidraw)
+# Detect platform
+if(APPLE)
+    message(STATUS "Building on macOS - using hidapi (IOKit backend)")
+    pkg_check_modules(HIDAPI REQUIRED hidapi)
+elseif(UNIX)
+    message(STATUS "Building on Linux - using hidapi-hidraw (hidraw backend)")
+    pkg_check_modules(HIDAPI REQUIRED hidapi-hidraw)
+else()
+    message(FATAL_ERROR "Unsupported platform")
+endif()
+#pkg_check_modules(HIDAPI REQUIRED hidapi-hidraw)
 
 add_library(PinscapePicoHostAPI PinscapePicoAPI.cpp)
 
