--- a/GUIConfigToolQt/CMakeLists.txt
+++ b/GUIConfigToolQt/CMakeLists.txt
@@ -6,9 +6,15 @@ set(CMAKE_CXX_STANDARD 17)
 
 find_package(Qt6 COMPONENTS Widgets REQUIRED)
 
+# build the host-side API library and link it
+add_subdirectory(
+    ${CMAKE_CURRENT_SOURCE_DIR}/../HostAPI
+    ${CMAKE_CURRENT_BINARY_DIR}/HostAPI)
+
 add_executable(PinscapePicoGUI
     main.cpp
     MainWindow.cpp
 )
 
 target_link_libraries(PinscapePicoGUI Qt6::Widgets)
+target_link_libraries(PinscapePicoGUI Qt6::Widgets PinscapePicoHostAPI)
